--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,7 @@
 .icon-input-btn{
     display: inline-block;
     position: relative;
+    padding: 1px;
 }
 .icon-input-btn input{
     padding-left: 2em;
@@ -32,6 +33,6 @@
 .icon-input-btn .bi{
     display: inline-block;
     position: absolute;
-    left: 0.65em;
-    top: 15%;
+    left: 0.8em;
+    top: 20%;
 }
