--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
             <input type="text" readonly class="form-control-plaintext" name="buff" id="dnNo" required>
         </div>
     </form>
-    <!-- <div class="alert alert-primary" role="alert" id="msg">
+    <div class="alert alert-primary" role="alert" id="msg">
         {% for message in get_flashed_messages() %}
                 <p>{{message}}</p>
         {% endfor %}
-    </div> -->
+    </div>
 {% endblock %}
