--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     </div>
     <form action="upload" enctype="multipart/form-data" method="POST">
         <div class="ratio-4-3">
-            <input class="form-control" type="file" name="pic" id="formFile" accept="image/*" hidden>
+            <input class="form-control" type="file" name="pic" id="formFile" accept="image/*" capture required hidden>
             <span class="icon-input-btn">
                 <i class="bi bi-qr-code-scan"></i> 
                 <input type="button" class="btn btn-primary" value="Scan" id="qrscan">
