--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             </span>
             <span class="icon-input-btn">
                 <i class="bi bi-cloud-arrow-up"></i> 
-                <input type="submit" class="btn btn-success" value="Upload" id="upload" disabled>
+                <input type="submit" class="btn btn-success" value="Upload" id="upload">
             </span>
             <span class="icon-input-btn">
                 <i class="bi bi-x-square"></i> 
